--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "engines": {
     "node": "0.8.x",
-    "npm": "1.1.x"
+    "npm": "1.1.x",
+    "coffee-script":"1.3.x",
+    "jade": "0.27.x",
+    "buffered-reader":"1.0.x",
+    "jquery":"1.7.x",
+    "pg":"0.6.x"
   }
 }
